Bugs fixed. Delete customer functional.